--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -2979,7 +2979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {
     "collapsed": false
    },
@@ -3045,22 +3045,226 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 87,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Click - 03\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ClickAssistedConversions</th>\n",
+       "      <th>CostEUR</th>\n",
+       "      <th>ImpressionAssistedConversions</th>\n",
+       "      <th>AllConversions</th>\n",
+       "      <th>Criteria</th>\n",
+       "      <th>Impressions</th>\n",
+       "      <th>Clicks</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SubGroup</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Click - 00</th>\n",
+       "      <td>0.250000</td>\n",
+       "      <td>3998.556667</td>\n",
+       "      <td>245.583333</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3032</td>\n",
+       "      <td>1.216718e+05</td>\n",
+       "      <td>8749.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Click - 01</th>\n",
+       "      <td>1.250000</td>\n",
+       "      <td>50248.388333</td>\n",
+       "      <td>1895.083333</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>40474</td>\n",
+       "      <td>1.369440e+06</td>\n",
+       "      <td>134983.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Click - 02</th>\n",
+       "      <td>0.250000</td>\n",
+       "      <td>57372.907500</td>\n",
+       "      <td>1441.166667</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>40212</td>\n",
+       "      <td>7.843326e+05</td>\n",
+       "      <td>142638.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Click - 03</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>17022.990000</td>\n",
+       "      <td>320.333333</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>11371</td>\n",
+       "      <td>1.610065e+05</td>\n",
+       "      <td>39491.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Click - 04</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>326.770000</td>\n",
+       "      <td>10.500000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>497</td>\n",
+       "      <td>3.319167e+03</td>\n",
+       "      <td>1354.166667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Converter - High</th>\n",
+       "      <td>10768.850000</td>\n",
+       "      <td>123228.950000</td>\n",
+       "      <td>7389.750000</td>\n",
+       "      <td>16266.083333</td>\n",
+       "      <td>17</td>\n",
+       "      <td>2.391588e+06</td>\n",
+       "      <td>627049.833333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Converter - Low</th>\n",
+       "      <td>869.750000</td>\n",
+       "      <td>68204.411667</td>\n",
+       "      <td>3515.750000</td>\n",
+       "      <td>3206.000000</td>\n",
+       "      <td>826</td>\n",
+       "      <td>1.112613e+06</td>\n",
+       "      <td>160315.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Converter - Mid</th>\n",
+       "      <td>2163.416667</td>\n",
+       "      <td>85393.607500</td>\n",
+       "      <td>4462.833333</td>\n",
+       "      <td>3490.916667</td>\n",
+       "      <td>145</td>\n",
+       "      <td>1.399455e+06</td>\n",
+       "      <td>187159.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Converter - Occasional</th>\n",
+       "      <td>828.216667</td>\n",
+       "      <td>80594.875833</td>\n",
+       "      <td>4338.416667</td>\n",
+       "      <td>4352.250000</td>\n",
+       "      <td>7035</td>\n",
+       "      <td>1.659514e+06</td>\n",
+       "      <td>227766.166667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Impressions - 00</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>190.166667</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>21866</td>\n",
+       "      <td>1.108471e+05</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Impressions - 01</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>203.583333</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>34027</td>\n",
+       "      <td>1.396895e+05</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Impressions - 02</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>8317</td>\n",
+       "      <td>1.726317e+04</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        ClickAssistedConversions        CostEUR  \\\n",
+       "SubGroup                                                          \n",
+       "Click - 00                              0.250000    3998.556667   \n",
+       "Click - 01                              1.250000   50248.388333   \n",
+       "Click - 02                              0.250000   57372.907500   \n",
+       "Click - 03                              0.000000   17022.990000   \n",
+       "Click - 04                              0.000000     326.770000   \n",
+       "Converter - High                    10768.850000  123228.950000   \n",
+       "Converter - Low                       869.750000   68204.411667   \n",
+       "Converter - Mid                      2163.416667   85393.607500   \n",
+       "Converter - Occasional                828.216667   80594.875833   \n",
+       "Impressions - 00                        0.000000       0.000000   \n",
+       "Impressions - 01                        0.000000       0.000000   \n",
+       "Impressions - 02                        0.000000       0.000000   \n",
+       "\n",
+       "                        ImpressionAssistedConversions  AllConversions  \\\n",
+       "SubGroup                                                                \n",
+       "Click - 00                                 245.583333        0.000000   \n",
+       "Click - 01                                1895.083333        0.000000   \n",
+       "Click - 02                                1441.166667        0.000000   \n",
+       "Click - 03                                 320.333333        0.000000   \n",
+       "Click - 04                                  10.500000        0.000000   \n",
+       "Converter - High                          7389.750000    16266.083333   \n",
+       "Converter - Low                           3515.750000     3206.000000   \n",
+       "Converter - Mid                           4462.833333     3490.916667   \n",
+       "Converter - Occasional                    4338.416667     4352.250000   \n",
+       "Impressions - 00                           190.166667        0.000000   \n",
+       "Impressions - 01                           203.583333        0.000000   \n",
+       "Impressions - 02                            17.000000        0.000000   \n",
+       "\n",
+       "                        Criteria   Impressions         Clicks  \n",
+       "SubGroup                                                       \n",
+       "Click - 00                  3032  1.216718e+05    8749.000000  \n",
+       "Click - 01                 40474  1.369440e+06  134983.750000  \n",
+       "Click - 02                 40212  7.843326e+05  142638.666667  \n",
+       "Click - 03                 11371  1.610065e+05   39491.000000  \n",
+       "Click - 04                   497  3.319167e+03    1354.166667  \n",
+       "Converter - High              17  2.391588e+06  627049.833333  \n",
+       "Converter - Low              826  1.112613e+06  160315.500000  \n",
+       "Converter - Mid              145  1.399455e+06  187159.000000  \n",
+       "Converter - Occasional      7035  1.659514e+06  227766.166667  \n",
+       "Impressions - 00           21866  1.108471e+05       0.000000  \n",
+       "Impressions - 01           34027  1.396895e+05       0.000000  \n",
+       "Impressions - 02            8317  1.726317e+04       0.000000  "
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "score = 7\n",
-    "print 'Click - {0:02d}'.format(score/2)  "
+    "df.groupby(by='SubGroup')[['AllConversions','ClickAssistedConversions',\n",
+    "                        'ImpressionAssistedConversions',\n",
+    "                        'CostEUR','Impressions','Clicks',\n",
+    "                        'Criteria']].aggregate({'AllConversions':sum,\n",
+    "                                                'ClickAssistedConversions':sum,\n",
+    "                                                'ImpressionAssistedConversions':sum,\n",
+    "                                                'CostEUR':sum,\n",
+    "                                                'Impressions':sum,\n",
+    "                                                'Clicks':sum,\n",
+    "                                                'Criteria':'count'})"
    ]
   },
   {
