--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -11,12 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "import gcp\n",
     "import gcp.bigquery as bq\n",
     "import pandas as pd\n",
     "import matplotlib.pylab as plt\n",
