--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -3249,6 +3249,32 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": [
+    "project = gcp.Context.default().project_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sample_bucket_name = project + '-datalab-samples'\n",
+    "sample_bucket_path = 'gs://' + sample_bucket_name\n",
+    "sample_bucket_object = sample_bucket_path + '/tmp/cars.csv'\n",
+    "print 'Bucket: ' + sample_bucket_name\n",
+    "print 'Object: ' + sample_bucket_object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": []
   }
  ],
