--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -3270,7 +3270,36 @@
     }
    ],
    "source": [
-    "print project"
+    "bucket_name = gcp.Context.default().project_id + '-'\n",
+    "sample_bucket_path = 'gs://' + sample_bucket_name\n",
+    "sample_bucket_object = sample_bucket_path + '/Hello.txt'\n",
+    "bigquery_dataset_name = 'TestDataSet'\n",
+    "bigquery_table_name = 'TestTable'\n",
+    "\n",
+    "# Define storage bucket\n",
+    "sample_bucket = storage.Bucket(sample_bucket_name)\n",
+    "\n",
+    "# Create storage bucket if it does not exist\n",
+    "if not sample_bucket.exists():\n",
+    "    sample_bucket.create()\n",
+    "\n",
+    "# Define BigQuery dataset and table\n",
+    "dataset = bq.DataSet(bigquery_dataset_name)\n",
+    "table = bq.Table(bigquery_dataset_name + '.' + bigquery_table_name)\n",
+    "\n",
+    "# Create BigQuery dataset\n",
+    "if not dataset.exists():\n",
+    "    dataset.create()\n",
+    "\n",
+    "# Create or overwrite the existing table if it exists\n",
+    "table_schema = bq.Schema.from_dataframe(simple_dataframe)\n",
+    "table.create(schema = table_schema, overwrite = True)\n",
+    "\n",
+    "# Write the DataFrame to GCS (Google Cloud Storage)\n",
+    "%storage write --variable simple_dataframe --object $sample_bucket_object\n",
+    "\n",
+    "# Write the DataFrame to a BigQuery table\n",
+    "table.insert_data(simple_dataframe)"
    ]
   },
   {
