--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -3270,7 +3270,7 @@
     }
    ],
    "source": [
-    "bucket_name = gcp.Context.default().project_id + '-'\n",
+    "sample_bucket_name = gcp.Context.default().project_id + '-datalab-example'\n",
     "sample_bucket_path = 'gs://' + sample_bucket_name\n",
     "sample_bucket_object = sample_bucket_path + '/Hello.txt'\n",
     "bigquery_dataset_name = 'TestDataSet'\n",
