--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -3270,14 +3270,14 @@
     }
    ],
    "source": [
-    "sample_bucket_name = gcp.Context.default().project_id + '-datalab-example'\n",
-    "sample_bucket_path = 'gs://' + sample_bucket_name\n",
-    "sample_bucket_object = sample_bucket_path + '/Hello.txt'\n",
+    "bucket_name = project + '-LMN-KeywordClassification'\n",
+    "bucket_path = 'gs://' + bucket_name\n",
+    "sample_bucket_object = sbucket_path + '/Hello.txt'\n",
     "bigquery_dataset_name = 'TestDataSet'\n",
     "bigquery_table_name = 'TestTable'\n",
     "\n",
     "# Define storage bucket\n",
-    "sample_bucket = storage.Bucket(sample_bucket_name)\n",
+    "sample_bucket = storage.Bucket(bucket_name)\n",
     "\n",
     "# Create storage bucket if it does not exist\n",
     "if not sample_bucket.exists():\n",
