--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -3256,6 +3256,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "?bq.DataSet(google.com:ddm-connectors-demo)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 33,
    "metadata": {
     "collapsed": false
@@ -3272,7 +3283,8 @@
    "source": [
     "bucket_name = project + '-LMN-KeywordClassification'\n",
     "bucket_path = 'gs://' + bucket_name\n",
-    "sample_bucket_object = sbucket_path + '/Hello.txt'\n",
+    "sample_bucket_object = bucket_path + '/LMN-KeywordClassification.txt'\n",
+    "\n",
     "bigquery_dataset_name = 'TestDataSet'\n",
     "bigquery_table_name = 'TestTable'\n",
     "\n",
