--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -3258,24 +3258,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "bq.DataSet(name='aw_dataset',context=ddm_context).exists()"
+    "d"
    ]
   },
   {
@@ -3299,18 +3288,18 @@
     "bucket_object = bucket_path + '/LMN-KeywordClassification.txt'\n",
     "\n",
     "bigquery_dataset_name = 'aw_dataset'\n",
-    "bigquery_table_name = 'Ke'\n",
+    "bigquery_table_name = 'KeywordClassification'\n",
     "\n",
     "# Define storage bucket\n",
-    "sample_bucket = storage.Bucket(bucket_name)\n",
+    "bucket = storage.Bucket(bucket_name)\n",
     "\n",
     "# Create storage bucket if it does not exist\n",
-    "if not sample_bucket.exists():\n",
-    "    sample_bucket.create()\n",
+    "if not bucket.exists():\n",
+    "    bucket.create()\n",
     "\n",
     "# Define BigQuery dataset and table\n",
-    "dataset = bq.DataSet(bigquery_dataset_name)\n",
-    "table = bq.Table(bigquery_dataset_name + '.' + bigquery_table_name)\n",
+    "dataset = bq.DataSet(name=bigquery_dataset_name,context=ddm_context)\n",
+    "table = bq.Table(bigquery_dataset_name + '.' + bigquery_table_name,context=ddm_context)\n",
     "\n",
     "# Create BigQuery dataset\n",
     "if not dataset.exists():\n",
