--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -3258,13 +3258,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AccountDescriptiveName</th>\n",
+       "      <th>CampaignName</th>\n",
+       "      <th>AdGroupName</th>\n",
+       "      <th>Criteria</th>\n",
+       "      <th>KeywordMatchType</th>\n",
+       "      <th>Group</th>\n",
+       "      <th>SubGroup</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Volagratis</td>\n",
+       "      <td>titolo keyword</td>\n",
+       "      <td>titolo keyword</td>\n",
+       "      <td>+orari +aereo</td>\n",
+       "      <td>Broad</td>\n",
+       "      <td>Click</td>\n",
+       "      <td>Click - 01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Volagratis</td>\n",
+       "      <td>Easyjet Destinazioni Europa</td>\n",
+       "      <td>Easyjet Amsterdam</td>\n",
+       "      <td>amsterdam voli low cost easyjet</td>\n",
+       "      <td>Exact</td>\n",
+       "      <td>Click</td>\n",
+       "      <td>Click - 01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Volagratis</td>\n",
+       "      <td>Voli Tratte Mondo - Italia 5 Exact</td>\n",
+       "      <td>Londra - Verona</td>\n",
+       "      <td>Londra-Verona</td>\n",
+       "      <td>Exact</td>\n",
+       "      <td>Impressions</td>\n",
+       "      <td>Impressions - 01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  AccountDescriptiveName                        CampaignName  \\\n",
+       "0             Volagratis                      titolo keyword   \n",
+       "1             Volagratis         Easyjet Destinazioni Europa   \n",
+       "2             Volagratis  Voli Tratte Mondo - Italia 5 Exact   \n",
+       "\n",
+       "         AdGroupName                         Criteria KeywordMatchType  \\\n",
+       "0     titolo keyword                    +orari +aereo            Broad   \n",
+       "1  Easyjet Amsterdam  amsterdam voli low cost easyjet            Exact   \n",
+       "2    Londra - Verona                    Londra-Verona            Exact   \n",
+       "\n",
+       "         Group          SubGroup  \n",
+       "0        Click        Click - 01  \n",
+       "1        Click        Click - 01  \n",
+       "2  Impressions  Impressions - 01  "
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "d"
+    "df[[u'AccountDescriptiveName', u'CampaignName',u'AdGroupName', u'Criteria',\n",
+    "    u'KeywordMatchType',u'Group',u'SubGroup']][:3]"
    ]
   },
   {
