--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -3258,92 +3258,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>AccountDescriptiveName</th>\n",
-       "      <th>CampaignName</th>\n",
-       "      <th>AdGroupName</th>\n",
-       "      <th>Criteria</th>\n",
-       "      <th>KeywordMatchType</th>\n",
-       "      <th>Group</th>\n",
-       "      <th>SubGroup</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Volagratis</td>\n",
-       "      <td>titolo keyword</td>\n",
-       "      <td>titolo keyword</td>\n",
-       "      <td>+orari +aereo</td>\n",
-       "      <td>Broad</td>\n",
-       "      <td>Click</td>\n",
-       "      <td>Click - 01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Volagratis</td>\n",
-       "      <td>Easyjet Destinazioni Europa</td>\n",
-       "      <td>Easyjet Amsterdam</td>\n",
-       "      <td>amsterdam voli low cost easyjet</td>\n",
-       "      <td>Exact</td>\n",
-       "      <td>Click</td>\n",
-       "      <td>Click - 01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Volagratis</td>\n",
-       "      <td>Voli Tratte Mondo - Italia 5 Exact</td>\n",
-       "      <td>Londra - Verona</td>\n",
-       "      <td>Londra-Verona</td>\n",
-       "      <td>Exact</td>\n",
-       "      <td>Impressions</td>\n",
-       "      <td>Impressions - 01</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  AccountDescriptiveName                        CampaignName  \\\n",
-       "0             Volagratis                      titolo keyword   \n",
-       "1             Volagratis         Easyjet Destinazioni Europa   \n",
-       "2             Volagratis  Voli Tratte Mondo - Italia 5 Exact   \n",
-       "\n",
-       "         AdGroupName                         Criteria KeywordMatchType  \\\n",
-       "0     titolo keyword                    +orari +aereo            Broad   \n",
-       "1  Easyjet Amsterdam  amsterdam voli low cost easyjet            Exact   \n",
-       "2    Londra - Verona                    Londra-Verona            Exact   \n",
-       "\n",
-       "         Group          SubGroup  \n",
-       "0        Click        Click - 01  \n",
-       "1        Click        Click - 01  \n",
-       "2  Impressions  Impressions - 01  "
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[[u'AccountDescriptiveName', u'CampaignName',u'AdGroupName', u'Criteria',\n",
-    "    u'KeywordMatchType',u'Group',u'SubGroup']][:3]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 33,
    "metadata": {
     "collapsed": false
@@ -3381,11 +3295,15 @@
     "    dataset.create()\n",
     "\n",
     "# Create or overwrite the existing table if it exists\n",
-    "table_schema = bq.Schema.from_dataframe(simple_dataframe)\n",
+    "table_schema = bq.Schema.from_dataframe(df[[u'AccountDescriptiveName', \n",
+    "                                            u'CampaignName',u'AdGroupName', \n",
+    "                                            u'Criteria', u'KeywordMatchType',\n",
+    "                                            u'Group',u'SubGroup']])\n",
     "table.create(schema = table_schema, overwrite = True)\n",
     "\n",
     "# Write the DataFrame to GCS (Google Cloud Storage)\n",
-    "%storage write --variable simple_dataframe --object $sample_bucket_object\n",
+    "%storage write --variable df[[u'AccountDescriptiveName',u'CampaignName',u'AdGroupName', \n",
+    "                              u'Criteria', u'KeywordMatchType',u'Group',u'SubGroup']] --object $sample_bucket_object\n",
     "\n",
     "# Write the DataFrame to a BigQuery table\n",
     "table.insert_data(simple_dataframe)"
