--- a/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
+++ b/LF_lastminute/Lastminute.com Group - DataLab Demo_v01.ipynb
@@ -3334,12 +3334,8 @@
     }
    ],
    "source": [
-    "bucket_name = demo_context.project_id + '-lmn-keywordclassification'\n",
-    "bucket_path = 'gs://' + bucket_name\n",
-    "bucket_object = bucket_path + '/LMN-KeywordClassification.txt'\n",
-    "\n",
     "bigquery_dataset_name = 'aw_dataset'\n",
-    "bigquery_table_name = 'KeywordClassification'\n",
+    "bigquery_table_name = 'KEYWORDS_GROUPS'\n",
     "\n",
     "# Define storage bucket\n",
     "bucket = storage.Bucket(bucket_name)\n",
@@ -3366,6 +3362,48 @@
     "\n",
     "# Write the DataFrame to a BigQuery table\n",
     "table.insert_data(df[[u'AccountDescriptiveName', u'CampaignName',u'AdGroupName', u'Criteria', u'KeywordMatchType',u'Group',u'SubGroup']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div class=\"bqtv\" id=\"7_146454306748\"><table><tr><th>AccountDescriptiveName</th><th>CampaignName</th><th>AdGroupName</th><th>Criteria</th><th>KeywordMatchType</th><th>Group</th><th>SubGroup</th></tr><tr><td>Volagratis Tratte Italia</td><td>voli Tratte Italia - Italia 2 Exact</td><td>Roma - Reggio Calabria</td><td>volo roma reggio</td><td>Exact</td><td>Click</td><td>Click - 01</td></tr><tr><td>Account Primario Volagratis</td><td>Voli Tratte Italia - Europa 2 - Exact</td><td>Verona - Bruxelles</td><td>voli low cost da Verona a Bruxelles</td><td>Exact</td><td>Click</td><td>Click - 01</td></tr><tr><td>Account Primario Volagratis</td><td>Voli Tratte Italia - Mondo 2 - Exact</td><td>Roma - Shangai</td><td>volo Roma Shangai</td><td>Exact</td><td>Impressions</td><td>Impressions - 01</td></tr><tr><td>Account Primario Volagratis</td><td>Compagnie aeree Phrase</td><td>Volotea</td><td>volo tea</td><td>Phrase</td><td>Impressions</td><td>Impressions - 00</td></tr><tr><td>Volagratis Tratte Italia</td><td>voli Tratte Italia - Europa 3</td><td>Bergamo - Colonia</td><td>Bergamo-Colonia</td><td>Phrase</td><td>Click</td><td>Click - 01</td></tr></table></div>\n",
+       "    <br />(rows: 5, time: 2.5s,     0B processed, job: job_fmN_2srGtuXRAdqPqqZ0SgBwlLI)<br />\n",
+       "    <script>\n",
+       "      require(['extensions/charting', 'element!7_146454306748', 'style!/static/extensions/charting.css'],\n",
+       "        function(charts, dom) {\n",
+       "          charts.render(dom,\n",
+       "            {\n",
+       "              chartStyle:\"table\",\n",
+       "              dataName:\"3\",\n",
+       "              fields:\"AccountDescriptiveName,CampaignName,AdGroupName,Criteria,KeywordMatchType,Group,SubGroup\",\n",
+       "              totalRows:5,\n",
+       "              rowsPerPage:25,\n",
+       "            }, {}, {\"rows\": [{\"c\": [{\"v\": \"Volagratis Tratte Italia\"}, {\"v\": \"voli Tratte Italia - Italia 2 Exact\"}, {\"v\": \"Roma - Reggio Calabria\"}, {\"v\": \"volo roma reggio\"}, {\"v\": \"Exact\"}, {\"v\": \"Click\"}, {\"v\": \"Click - 01\"}]}, {\"c\": [{\"v\": \"Account Primario Volagratis\"}, {\"v\": \"Voli Tratte Italia - Europa 2 - Exact\"}, {\"v\": \"Verona - Bruxelles\"}, {\"v\": \"voli low cost da Verona a Bruxelles\"}, {\"v\": \"Exact\"}, {\"v\": \"Click\"}, {\"v\": \"Click - 01\"}]}, {\"c\": [{\"v\": \"Account Primario Volagratis\"}, {\"v\": \"Voli Tratte Italia - Mondo 2 - Exact\"}, {\"v\": \"Roma - Shangai\"}, {\"v\": \"volo Roma Shangai\"}, {\"v\": \"Exact\"}, {\"v\": \"Impressions\"}, {\"v\": \"Impressions - 01\"}]}, {\"c\": [{\"v\": \"Account Primario Volagratis\"}, {\"v\": \"Compagnie aeree Phrase\"}, {\"v\": \"Volotea\"}, {\"v\": \"volo tea\"}, {\"v\": \"Phrase\"}, {\"v\": \"Impressions\"}, {\"v\": \"Impressions - 00\"}]}, {\"c\": [{\"v\": \"Volagratis Tratte Italia\"}, {\"v\": \"voli Tratte Italia - Europa 3\"}, {\"v\": \"Bergamo - Colonia\"}, {\"v\": \"Bergamo-Colonia\"}, {\"v\": \"Phrase\"}, {\"v\": \"Click\"}, {\"v\": \"Click - 01\"}]}], \"cols\": [{\"type\": \"string\", \"id\": \"AccountDescriptiveName\", \"label\": \"AccountDescriptiveName\"}, {\"type\": \"string\", \"id\": \"CampaignName\", \"label\": \"CampaignName\"}, {\"type\": \"string\", \"id\": \"AdGroupName\", \"label\": \"AdGroupName\"}, {\"type\": \"string\", \"id\": \"Criteria\", \"label\": \"Criteria\"}, {\"type\": \"string\", \"id\": \"KeywordMatchType\", \"label\": \"KeywordMatchType\"}, {\"type\": \"string\", \"id\": \"Group\", \"label\": \"Group\"}, {\"type\": \"string\", \"id\": \"SubGroup\", \"label\": \"SubGroup\"}]});\n",
+       "        }\n",
+       "      );\n",
+       "    </script>\n",
+       "  "
+      ],
+      "text/plain": [
+       "QueryResultsTable job_fmN_2srGtuXRAdqPqqZ0SgBwlLI"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%bigquery sample --table google.com:ddm-connectors-demo:aw_dataset.KeywordClassification --count 5"
    ]
   },
   {
